Revision history for perl distribution Mojolicious-Plugin-AssetPack

1.17 Not Released
 - Removed Mojolicious::Plugin::AssetPack::Asset::tag_helper()
 - Add Mojolicious::Plugin::AssetPack::tag_for()
 - Add Mojolicious::Plugin::AssetPack::Asset::url_for()
 - Add support for gif, ico, mp3, mp4, ogg, ogv, svg and webm.

1.16 2016-06-29T19:05:43+0200
 - Improved documentation for store() #101

1.15 2016-06-23T10:50:26+0200
 - Fix Fetch pipe will skip downloading "data:..." urls #100

1.14 2016-06-21T13:33:41+0200
 - Fix Fetch::URL_RE for url(...) without quotes #91 #99
 - Fix trimming whitespace for topics in .def file, closes #93
 - Fix replacing all fetched files #94
 - Will show download error message #96

1.13 2016-05-21T08:11:27+0200
 - Fix sass-current-app.t after 1.12

1.12 2016-05-20T20:59:10+0200
 - Fix compressing Sass assets with SASS_STYLE_COMPRESSED
   Contributor: Zoffix Znet

1.11 2016-05-17T07:55:56+0200
 - Fix failing reloader-process.t

1.10 2016-05-15T11:50:24+0200
 - Fix watching the actual input asset files in Pipe::Reloader #86
   Contributor: Mark Grimes

1.09 2016-05-10T21:36:09+0200
 - Fix to deal with multiple imports of the same Sass file #83
   Contributor: Mark Grimes

1.08 2016-05-09T22:23:42+0200
 - Add support for minifying jpeg image files
 - Add support for minifying png image files #81
   Contributor: Heiko Jansen
 - Add Mojolicious::Plugin::AssetPack::Asset::tag_helper() to support
   future "image" assets.

1.07 2016-05-03T13:55:45+0200
 - Fix rendering assets URL in mounted apps

1.06 2016-04-17T14:22:08+0200
 - Fix Fetch with Combine #75

1.05 2016-04-17T11:19:29+0200
 - Need to "use CSS::Sass 3.3.0" to avoid test failures on missing features
 - Add support for automatic download of fonts #75
 - Add support for conditions in assetpack.def #78
 - Fix SCSS files with UTF-8 encoding #70
 - Fix adding route earlier than on the first request #77
 - Fix setting url() on asset from db file

1.04 2016-04-08T22:40:29+0200